plugins {
    id "java"
    id "jacoco"
}

group "uk.gov.di.authentication.oidc"
version "unspecified"

dependencies {

    implementation project(path: ':ipv-api')
    testImplementation project(path: ':ipv-api')
    compileOnly             configurations.kms,
            configurations.lambda,
            configurations.sqs,
            configurations.sns,
            configurations.dynamodb

    implementation configurations.govuk_notify,
            configurations.gson,
            configurations.nimbus,
            configurations.bouncycastle,
            configurations.cloudwatch,
            project(":orchestration-shared"),
            project(":client-registry-api"),
            project(":doc-checking-app-api")

    testImplementation configurations.tests,
            configurations.lambda_tests,
            project(":orchestration-shared-test"),
            configurations.lambda,
            configurations.sqs,
            configurations.kms,
            configurations.dynamodb
    testRuntimeOnly configurations.test_runtime
}

test {
    useJUnitPlatform()
    environment "TRACING_ENABLED", "false"
}

task buildZip(type: Zip) {
    from compileJava
    from processResources
    into("lib") {
        from configurations.runtimeClasspath
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

jacocoTestReport {
    reports {
        xml.enabled true
    }
    dependsOn "test"
}
